Add upstream health checks, least-connections routing, metrics, and backpressure
- Add UpstreamRegistry singleton DO for centralized upstream management
- Implement periodic health checks (30s interval, WebSocket upgrade probe)
- Replace random upstream selection with least-connections strategy
- Track per-upstream metrics (bytes in/out, connections, errors)
- Add coarse backpressure via in-flight message counting
- Expose /health and /metrics endpoints via the registry
- Add v2 migration for UpstreamRegistry DO in wrangler.toml

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -11,6 +11,14 @@ UPSTREAMS = "wss://wisp1.example.com/wisp,wss://wisp2.example.com/wisp"
 name = "WISP_PROXY"
 class_name = "WispProxy"
 
+[[durable_objects.bindings]]
+name = "UPSTREAM_REGISTRY"
+class_name = "UpstreamRegistry"
+
 [[migrations]]
 tag = "v1"
 new_classes = ["WispProxy"]
+
+[[migrations]]
+tag = "v2"
+new_classes = ["UpstreamRegistry"]
